* TO DO: Add a utility function, `h2o.ensemble_metrics` to extract default performance metrics for binomial and gaussian family (AUC and MSE).
* TO FINISH: Added new functions, `h2o.save_ensemble` and `h2o.load_ensemble`, for easy saving and loading of ensemble models to disk.


h2oEnsemble 0.1.0 (2015-10-29)
----------------
* Removed `target_ratio_comm_to_comp` argument from `h2o.deeplearning.wrapper` function, since this is not implemeted in the latest stable release (Slater-9), and is only on master.  Once this change gets merged into the latest stable release, we will add this argument back in.


h2oEnsemble 0.0.9 (2015-10-28)
----------------
* Added `target_ratio_comm_to_comp` argument to the `h2o.deeplearning.wrapper` function.
* Added new function `h2o.metalearn` which allows the user to easily re-fit the metalearner using a new metalearning algorithm.
* Renamed output value, `Z`: Changed name to `levelone`.  This H2O Frame includes the Z matrix columns plus a fold id column and the original response column.
* Added tests for `h2o.ensemble` and `h2o.metalearn` using the `testthat` framework.
* Updated `h2o.ensemble` example code to use `h2o.importFile` instead of `as.h2o`.
* Added a very basic `print` method for `h2o.ensemble` objects.


h2oEnsemble 0.0.8 (2015-10-07)
----------------
* Added support for the `col_sample_rate` and `sample_rate` arguments in the GLM wrapper.


h2oEnsemble 0.0.7 (2015-10-04)
----------------
* Added backward compatibility for `h2o` package with the data frame class name with "H2OFrame".  Temporarily on master, the `h2o` package is using a data frame class with name "Frame" (Rapids integration).


h2oEnsemble 0.0.6 (2015-09-28)
----------------
* Add support for new distribution/family arg in `h2o.gbm` and `h2o.glm`.
* Made some adjustments to the internals of the `h2o.ensemble` function to become compatible with the "Rapids" integration in the `h2o` package.


h2oEnsemble 0.0.5 (2015-08-10)
----------------